# DelphesO2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: FindAliceO2.cmake  FindDelphes.cmake  FindHepMC.cmake  FindPythia.cmake
examples/: CMakeLists.txt  clean.sh
examples/aod/: check_consistency_with_AP.py  createO2tables.C  createO2tables.h  inspectTOF.C
examples/cards/: propagate.2kG.photons.tcl  propagate.2kG.tails.tcl  propagate.2kG.tcl
examples/o2kine/: run.sh  smear_o2_kine.C
examples/pythia8/: pythia8_KrKr.cfg  pythia8_OO.cfg  pythia8_PbPb.cfg  pythia8_XeXe.cfg  pythia8_inel.cfg  pythia_nuclei.cfg  pythia_onia_X.cfg  pythia_onia_chic.cfg
examples/pythia8/decays/: force_X3872_charmonia.cfg  force_hadronic_D.cfg  force_onia.cfg
examples/scripts/: .gitignore  D0-gun.sh  README.md  check_table_consistency.py  clean.sh  common.py  createO2tables.C  createO2tables.h  createO2tables.py  createO2tables.sh  createO2tables_gun.sh  create_luts.sh  dca.sh  default_configfile.ini  doanalysis.py  doanalysis.sh  dpl-config_std.json  emcal.sh  ftof.sh  gun_configfile.ini  muon.sh  pythia8_inel.cfg  rich.sh  tof.sh
examples/scripts/diagnostic_tools/: README.md  check_table_O2mcparticle.py  check_table_consistency.py  check_table_indices.py  compare_two_aods.py  doanalysis.py  grid_downloader.py  inspect_hepmc.py  is_aod_sane.py  merge_aods.py  o2_analysis_workflows.ini  omogenize_output.py
examples/scripts/grid/: .gitignore  make_grid_files.py
examples/smearing/: .clang-format  dca.C  draw.py  draw_dNdeta.C  draw_dca.C  draw_dca_tof.C  draw_eff.C  draw_eff_tof.C  draw_etadep.C  draw_mid_fwd.C  draw_pt.C  draw_pt_scenarios.C  draw_pt_tof.C  draw_scenarios.C  emcal.C  ftof.C  lutCovm.hh  lutRead.C  lutRead_allres_vseta.C  lutRead_allres_vspt.C  lutRead_dca.C  lutRead_dca_vs_eta.C  lutRead_eff.C  lutRead_eff_vs_eta.C  lutRead_pt.C  lutRead_pt_vs_eta.C  muon.C  print_lut.py  rich.C  tof.C
examples/smearing/luts/: .gitignore  README.md
examples/vertexing/: K0s.C  vertexing.C
rpythia8/: .clang-format  CMakeLists.txt  rpythia8-bgbw.cc  rpythia8-box.cc  rpythia8-gun.cc  rpythia8.cc
src/: CMakeLists.txt  DelphesO2LinkDef.h  ECALdetector.cc  ECALdetector.hh  MIDdetector.cc  MIDdetector.hh  PhotonConversion.cc  PhotonConversion.hh  PreShower.cc  PreShower.hh  RICHdetector.cc  RICHdetector.hh  TOFLayer.cc  TOFLayer.hh  TrackSmearer.cc  TrackSmearer.hh  TrackUtils.cc  TrackUtils.hh  VertexFitter.cc  VertexFitter.hh  lutCovm.hh  lutWrite.cc  lutWrite.default.cc  lutWrite.geometry_v1.cc  lutWrite.geometry_v2.cc  lutWrite.geometry_v4.cc  lutWrite.its1.cc  lutWrite.its2.cc  lutWrite.its3.cc  lutWrite.scenario1.cc  lutWrite.scenario2.cc  lutWrite.scenario3.cc  lutWrite.scenario4.cc  lutWrite.tof1.cc  lutWrite.tof2.cc  lutWrite.v12.cc  lutWrite.werner.cc  lutWrite_aod.cc
src/DetectorK/: DetectorK.cxx  DetectorK.h  HistoManager.cxx  HistoManager.h
src/fwdRes/: fwdRes.C
